// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`number > crossSerialize > supports numbers 1`] = `"3735928559"`;

exports[`number > crossSerialize > supports numbers 2`] = `"0/0"`;

exports[`number > crossSerialize > supports numbers 3`] = `"1/0"`;

exports[`number > crossSerialize > supports numbers 4`] = `"-1/0"`;

exports[`number > crossSerialize > supports numbers 5`] = `"-0"`;

exports[`number > crossSerializeAsync > supports numbers 1`] = `"$R[0]=Promise.resolve(3735928559)"`;

exports[`number > crossSerializeAsync > supports numbers 2`] = `"$R[0]=Promise.resolve(0/0)"`;

exports[`number > crossSerializeAsync > supports numbers 3`] = `"$R[0]=Promise.resolve(1/0)"`;

exports[`number > crossSerializeAsync > supports numbers 4`] = `"$R[0]=Promise.resolve(-1/0)"`;

exports[`number > crossSerializeAsync > supports numbers 5`] = `"$R[0]=Promise.resolve(-0)"`;

exports[`number > crossSerializeStream > supports -0 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`number > crossSerializeStream > supports -0 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],-0)"
`;

exports[`number > crossSerializeStream > supports Number.NEGATIVE_INFINITY 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`number > crossSerializeStream > supports Number.NEGATIVE_INFINITY 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],-1/0)"
`;

exports[`number > crossSerializeStream > supports Number.NaN 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`number > crossSerializeStream > supports Number.NaN 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],0/0)"
`;

exports[`number > crossSerializeStream > supports Number.POSITIVE_INFINITY 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`number > crossSerializeStream > supports Number.POSITIVE_INFINITY 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],1/0)"
`;

exports[`number > crossSerializeStream > supports numbers 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`number > crossSerializeStream > supports numbers 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],3735928559)"
`;

exports[`number > toCrossJSON > supports numbers 1`] = `"{"t":0,"s":3735928559}"`;

exports[`number > toCrossJSON > supports numbers 2`] = `"{"t":2,"s":7}"`;

exports[`number > toCrossJSON > supports numbers 3`] = `"{"t":2,"s":5}"`;

exports[`number > toCrossJSON > supports numbers 4`] = `"{"t":2,"s":6}"`;

exports[`number > toCrossJSON > supports numbers 5`] = `"{"t":2,"s":4}"`;

exports[`number > toCrossJSONAsync > supports numbers 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":0,"s":3735928559}}"`;

exports[`number > toCrossJSONAsync > supports numbers 2`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":7}}"`;

exports[`number > toCrossJSONAsync > supports numbers 3`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":5}}"`;

exports[`number > toCrossJSONAsync > supports numbers 4`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":6}}"`;

exports[`number > toCrossJSONAsync > supports numbers 5`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":4}}"`;

exports[`number > toCrossJSONStream > supports -0 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`number > toCrossJSONStream > supports -0 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":4}]}"`;

exports[`number > toCrossJSONStream > supports Number.NEGATIVE_INFINITY 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`number > toCrossJSONStream > supports Number.NEGATIVE_INFINITY 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":6}]}"`;

exports[`number > toCrossJSONStream > supports Number.NaN 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`number > toCrossJSONStream > supports Number.NaN 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":7}]}"`;

exports[`number > toCrossJSONStream > supports Number.POSITIVE_INFINITY 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`number > toCrossJSONStream > supports Number.POSITIVE_INFINITY 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":5}]}"`;

exports[`number > toCrossJSONStream > supports numbers 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`number > toCrossJSONStream > supports numbers 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":0,"s":3735928559}]}"`;

exports[`number > toJSON > supports numbers 1`] = `"{"t":{"t":0,"s":3735928559},"f":31,"m":[]}"`;

exports[`number > toJSON > supports numbers 2`] = `"{"t":{"t":2,"s":7},"f":31,"m":[]}"`;

exports[`number > toJSON > supports numbers 3`] = `"{"t":{"t":2,"s":5},"f":31,"m":[]}"`;

exports[`number > toJSON > supports numbers 4`] = `"{"t":{"t":2,"s":6},"f":31,"m":[]}"`;

exports[`number > toJSON > supports numbers 5`] = `"{"t":{"t":2,"s":4},"f":31,"m":[]}"`;

exports[`number > toJSONAsync > supports numbers 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":0,"s":3735928559}},"f":31,"m":[]}"`;

exports[`number > toJSONAsync > supports numbers 2`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":7}},"f":31,"m":[]}"`;

exports[`number > toJSONAsync > supports numbers 3`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":5}},"f":31,"m":[]}"`;

exports[`number > toJSONAsync > supports numbers 4`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":6}},"f":31,"m":[]}"`;

exports[`number > toJSONAsync > supports numbers 5`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":4}},"f":31,"m":[]}"`;
